--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "gulp-autoprefixer": "^2.3.1",
+    "phlux": "^1.0.5",
     "react": "~0.12.2"
   },
   "devDependencies": {
