--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "gulp-autoprefixer": "^2.3.1",
     "phlux": "^1.0.5",
-    "react": "~0.12.2"
+    "raf": "^3.1.0",
+    "react": "~0.12.2",
+    "vkey": "^1.0.0"
   },
   "devDependencies": {
     "aliasify": "~1.7.2",
