Connected the data to Firebase.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "url": "https://github.com/ehgoodenough/cursed"
   },
   "dependencies": {
+    "firebase": "^2.2.9",
     "gulp-autoprefixer": "^2.3.1",
     "jcanvas": "^15.8.17",
     "jquery": "^2.1.4",
     "phlux": "^1.0.5",
     "raf": "^3.1.0",
     "react": "~0.12.2",
+    "shortid": "^2.2.2",
     "vkey": "^1.0.0"
   },
   "devDependencies": {
